--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,2 +1,12 @@
+@import "colors"
 @import "interface"
+/* стили для навигационного меню */
+/* стили для навбара */
+@import "blocks/nav"
 @import "blocks/submenu"
+/* стили для секции каталога */
+@import "blocks/catalog"
+/* секции для блока хедер ( слайдера) */
+@import "blocks/header"
+
+@import "blocks/footer"
