--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -3,3 +3,33 @@
 body 
   padding: 0
   margin: 0
+  font-family: 'Roboto', sans-serif;
+  & a 
+    outline: none
+    text-decoration: none
+    color: $text-color
+.container
+  margin: auto
+  max-width: 1202px 
+.button
+  max-width: 186px
+  border: none
+  outline: none
+  padding: 10px 35px
+  font-size: 13px
+  font-weight: 700
+  line-height: 25.05px
+  // Text style for "В, ызвать"
+  color: #ffffff
+.title
+  text-align: center
+  color: $title-color
+  font-size: 32px
+  font-weight: 700
+  line-height: 30px
+  text-transform: uppercase
+.subtitle
+  color: $title-color
+  font-size: 15px
+  font-weight: 400
+  line-height: 30px
