--- a/src/sass/blocks/_submenu.sass
+++ b/src/sass/blocks/_submenu.sass
@@ -1,18 +1,79 @@
-.navbar
-  display: flex
-  justify-content: space-around
-.visible-menu
-  max-width: 1000px  
-  display: flex
-  justify-content: space-between
-  align-items: flex-start
-  background-color: #f3f3f3
-#nav_list
-  position: relative
 #submenu
   position: absolute
-  display: none
-  display: flex
-  flex-direction: row
+  top: 40px
+  display: none 
   transition 0.5s
+.visible-menu
   
+.navbar
+  display: flex
+  justify-content: space-between
+  &__item
+    margin-right: 48px
+    font-size: 13px
+    font-weight: 700
+    line-height: 20px
+    text-transform: uppercase
+    letter-spacing: normal
+    &:last-child
+      margin-right: 25px
+      color: $decorate-color
+#nav_list
+  position: relative
+.submenu 
+  padding-top: 30px 
+  /* padding: 10px 0 0 40px  */
+  list-style: none
+  text-transform: uppercase
+  font-weight: 700
+  cursor: pointer
+  z-index: 9999
+  background-color: #fff
+  opacity: 0.96
+  &:first-child
+    padding-left: 40px
+  &:nth-child(2)
+    margin-left: -40px
+  &:nth-child(4)
+    padding-left: 2px
+  &-block
+    padding-left: 0
+    width: 270px;
+  &__item
+    margin: 0
+    margin-right: 100px  
+    padding: 0
+    list-style: none
+    font-size: 14px
+    font-weight: 400
+    line-height: 24px
+    text-transform: none
+    // Text style for "Шкафы , ТВ"
+    letter-spacing: 0.35px
+    &:first-child
+      margin-top: 25px
+  /*   & a
+      text-decoration: none
+      text-transform: none
+      font-size: 16px
+      color: $text-color
+      &:hover
+        color: #84b04f */
+  &__title
+    position: relative
+    font-size: 13px
+    font-weight: 700
+    line-height: 25.05px
+    text-transform: uppercase
+    // Text style for "Детская"
+    color: #000000
+    letter-spacing: 0.33px 
+    &::after
+      content: ''
+      position: absolute
+      display: block
+      width: 30px
+      top: 30px
+      left: -5px
+      border-bottom: 2px solid $decorate-color  
+
