--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,5 +8,11 @@
 @import "blocks/catalog"
 /* секции для блока хедер ( слайдера) */
 @import "blocks/header"
+/* Стили для блока с новинками */
+@import "blocks/portfolio"
+/* стли для блока с описанием */
+@import "blocks/about"
 
 @import "blocks/footer"
+@import "blocks/offers"
+
