--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -2,7 +2,11 @@ $text-color: #000000
 $decorate-color: #7eab4c
 $nav-text: #030303
 $input-text: #939393;
-$orange-button: #ee8b15
-$green-button: #7dad4b;
+
 $bgc-footer: #63564f
 $title-color: #1f1f1f
+
+/* кнопки */
+$btn-portfolio: #63564f
+$orange-button: #ee8b15
+$green-button: #7dad4b;
