--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -12,7 +12,6 @@ body
   margin: auto
   max-width: 1202px 
 .button
-  max-width: 186px
   border: none
   outline: none
   padding: 10px 35px
@@ -29,7 +28,15 @@ body
   line-height: 30px
   text-transform: uppercase
 .subtitle
+  position: relative
   color: $title-color
   font-size: 15px
   font-weight: 400
   line-height: 30px
+  &::after
+    content: ''
+    position: absolute
+    width: 45px
+    border: 0.5px solid $title-color
+    left: 580px
+    top: 47px
