--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -3,6 +3,7 @@ $decorate-color: #7eab4c
 $nav-text: #030303
 $input-text: #939393;
 
+
 $bgc-footer: #63564f
 $title-color: #1f1f1f
 
@@ -10,3 +11,5 @@ $title-color: #1f1f1f
 $btn-portfolio: #63564f
 $orange-button: #ee8b15
 $green-button: #7dad4b;
+$orange-button: #ee8b15
+$color-white: #fff
