--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,7 +12,10 @@
 @import "blocks/portfolio"
 /* стли для блока с описанием */
 @import "blocks/about"
-
+/* стили блока с акцией месяца  */
+@import "blocks/sails"
+/* блок с новостями */
+@import "blocks/news"
+@import "blocks/brif"
 @import "blocks/footer"
 @import "blocks/offers"
-
