готовая первая страница + адаптивы

--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -84,4 +84,42 @@
       margin-left: 62px
   &__phone img
     margin-right: 10px
-  
+@media (max-width: 1300px) 
+  .contact__text
+    margin-right: 100px
+@media (max-width: 1200px) 
+  .footer-nav
+    flex-wrap: wrap
+  .contact__text
+    margin-right: 50px
+@media (max-width: 1080px) 
+  .contact__text
+    margin-right: 10px
+@media (max-width: 991px)
+  .footer-contacts
+    align-items: center
+    justify-content: space-between
+    flex-wrap: wrap
+  .contact__text
+    margin-left: 200px
+    max-width: 300px
+    font-size: 15px
+  .contact__phone 
+    padding-top: 20px
+@media (max-width: 768px)
+  .footer-contacts
+    justify-content: center
+  .contact__text
+    margin-left: 0
+    padding-top: 15px
+    max-width: 90%
+    text-align: left
+    font-size: 16px
+  .contact__phone 
+    width: 100%
+    text-align: center
+    padding: 0
+    margin: auto
+    padding-top: 15px
+  .contact__link__last
+    margin-left: 0
