--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -3,6 +3,7 @@
 /* стили для навигационного меню */
 /* стили для навбара */
 @import "blocks/nav"
+@import "blocks/second-nav"
 @import "blocks/submenu"
 /* стили для секции каталога */
 @import "blocks/catalog"
@@ -15,6 +16,9 @@
 /* стили блока с акцией месяца  */
 @import "blocks/sails"
 /* блок с новостями */
+/* блок с отзвыами */
+@import "blocks/feedback"
+/* секция новости */
 @import "blocks/news"
 @import "blocks/brif"
 @import "blocks/footer"
