--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -8,6 +8,8 @@ body
     outline: none
     text-decoration: none
     color: $text-color
+  & img
+    max-width: 100%
 .container
   margin: auto
   max-width: 1202px 
@@ -40,3 +42,44 @@ body
     border: 0.5px solid $title-color
     left: 580px
     top: 47px
+@media (max-width: 1200px) 
+  .container
+    max-width: 992px
+  .subtitle
+    &::after
+      content: ''
+      left: 470px
+@media (max-width: 991px)
+  .container 
+    max-width: 768px
+  .title
+    font-size: 20px
+    font-weight: 700
+    line-height: 30px
+    text-transform: uppercase
+  .subtitle
+    &::after
+      content: ''
+      left: 350px
+@media (max-width: 768px)
+  .container 
+    max-width: 576px
+  .subtitle
+    &::after
+      content: ''
+      left: 270px
+@media (max-width: 576px)
+  .container 
+    max-width: 300px
+  .container 
+    max-width: 768px
+  .title
+    font-size: 16px
+    font-weight: 700
+    line-height: 30px
+    text-transform: uppercase
+  .subtitle
+    font-size: 13
+    &::after
+      content: ''
+      left: 120px
