--- a/src/sass/blocks/_about.sass
+++ b/src/sass/blocks/_about.sass
@@ -12,3 +12,13 @@
     font-size: 15px
     font-weight: 400  
     line-height: 25px
+@media (max-width: 1200px) 
+  .about
+    padding-top: 40px
+    padding-bottom: 50px
+@media (max-width: 992px)
+  .about
+    padding-top: 30px
+    padding-bottom: 40px
+  &-title
+    margin-bottom: 5px
