--- a/src/sass/blocks/_nav.sass
+++ b/src/sass/blocks/_nav.sass
@@ -1,3 +1,5 @@
+.logo img
+  max-width: 280px
 .nav
   padding-top: 28px
   padding-bottom: 8px
@@ -12,7 +14,7 @@
   &-list
     padding-top: 15px
     display: flex
-    justify-content: flex-start
+    justify-content: space-between
     align-items: center
   &-input
     margin-left: 70px
@@ -46,4 +48,59 @@
     background-color: $orange-button
   &-button__call
     background-color: $green-button
-    
+@media (max-width: 1300px)
+  .nav
+    &__phone-text
+      margin-left: 5px
+    &__basket-text
+      margin-left: 5px
+    &__link
+      margin-left: 30px
+@media (max-width: 1300px)
+  .nav
+    &-input
+      margin-left: 20px
+      padding: 8px 90px 8px 15px
+    &__phone-text
+      margin-left: 3px
+      font-size: 14px
+    &__basket-text
+      margin-left: 3px
+      font-size: 14px
+    &__link
+      margin-left: 10px
+    .logo img
+      max-width: 280px
+@media (max-width: 994px)
+  .logo img
+    width: 180px
+  .nav
+    &-hat
+      justify-content: space-between
+      flex-wrap: wrap
+    &__phone
+      margin: auto
+@media (max-width: 768px)
+  .nav
+    &-input  
+      display: none
+    &__phone
+      margin: 0
+    &-hat
+      justify-content: space-around
+    &__basket
+      order: 1
+    &__phone
+      order: -1
+    .logo 
+      order: -2
+@media (max-width: 576px)
+  .logo img 
+    width: 150px
+  .nav
+    &__phone-text
+      margin-left: 3px
+      font-size: 12px
+    &__basket-text
+      margin-left: 3px
+      font-size: 12px
