--- a/src/sass/blocks/_news.sass
+++ b/src/sass/blocks/_news.sass
@@ -10,7 +10,7 @@
     margin-bottom: 60px
   &-block
     display: flex
-    align-items: 
+    align-items: center
     justify-content: space-between
   &__button
     margin-top: 10px
@@ -25,8 +25,6 @@
     font-size: 14px
     font-weight: 700
     line-height: 30px
-
-
   &-card
     position: relative
     padding-bottom: 30px
@@ -71,3 +69,52 @@
       font-weight: 700
       font-size: 18px
       text-transform: uppercase
+@media (max-width: 1200px)
+  .news
+    
+    &-block
+      flex-wrap: wrap
+      justify-content: center
+      align-items: center
+      &:first-child
+        
+    &-card
+      margin-top: 15px
+      margin-left: 50px
+      &__title
+        font-size: 12px
+      & p, h4
+        padding: 0 10px
+      &__text
+        padding: 0
+        font-size: 12px
+        line-height: 20px
+@media (max-width: 992px)
+  .news
+    padding-top: 40px
+    &__subtitle
+      margin-bottom: 30px
+    &__text
+    &-button
+      margin-top: 10px
+@media (max-width: 768px)
+  .news
+    padding-top: 40px
+    &-card
+      flex-basis: 60%
+    &__subtitle
+      margin-bottom: 30px
+    &__text
+    &-button
+      margin-top: 10px
+@media (max-width: 576px)
+  .news
+    padding-top: 20px
+    &-card
+      padding-bottom: 10px
+      flex-basis: 75%
+      margin-left: 0
+    &__date
+      font-size: 12px
+      top: 5px
+      left: 5px
