--- a/src/sass/blocks/_offers.sass
+++ b/src/sass/blocks/_offers.sass
@@ -27,7 +27,6 @@
     line-height: 30px
     text-align: left
     text-transform: uppercase
-
   &__text
     padding-left: 37px
     padding-right: 47px
@@ -38,3 +37,56 @@
     text-align: left
     width: 25%
     background-color: #ffffff
+@media (max-width: 1200px) 
+  .block
+    &__image
+      width: 40%
+      margin-left: 20px
+      margin-bottom: 20px
+      & img
+        max-width: none
+    &__text
+      width: 40%
+      margin-left: 20px
+      margin-bottom: 20px
+  .offers-block
+@media (max-width: 992px)
+  .offers
+    padding-top: 50px
+    padding-bottom: 40px
+    &-block
+      justify-content: space-evenly
+  .block
+    
+    &__image
+      width: 40%
+      margin-left: 20px
+      margin-bottom: 20px
+      & img
+        max-width: none
+    &__text
+      width: 40%
+      margin-left: 20px
+      margin-bottom: 20px
+@media (max-width: 768px)
+  .block
+    &__image
+      width: 80%
+      margin-left: 20px
+      margin-bottom: 20px
+      & img
+        max-width: none
+    &__text
+      width: 80%
+      min-height: 250px
+      margin-left: 20px
+      margin-bottom: 20px
+      text-align: center
+    &__title
+      font-size: 11px
+      text-align: center
+      line-height: 15px
+      margin-bottom: 5px
+  .offer__text
+    font-size: 12px
+  
