--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -8,7 +8,7 @@
     display: block
     margin: auto
     text-align: center
-    margin-bottom: 30px
+    margin-bottom: 40px
     
   &-block
     display: flex
@@ -21,8 +21,9 @@
   &__button
     position: absolute
     max-width: 207px
-    top: 285px
+    bottom: 30px
     left: 25px
+    padding: 30px
     background-color: $btn-portfolio
     font-size: 13px
     font-weight: 700
@@ -47,3 +48,23 @@
   margin: auto
   padding: 12px 55px
   background-color: $green-button
+@media (max-width: 1200px)
+  .portfolio
+    padding-top: 50px
+    padding-bottom: 50px
+@media (max-width: 992px)
+  .portfolio
+    &-block
+    &-item
+      margin: auto
+      margin-top: 20px
+      align-items: center
+      width: 80%  
+@media (max-width: 576px)
+  .portfolio
+    &__button
+      left: 7px 
+      bottom: 7px
+      font-size: 8px
+  .button-velas, .button-irrida, .button-purrino, .button-iddida
+    padding: 0 5px
