--- a/src/sass/blocks/_sails.sass
+++ b/src/sass/blocks/_sails.sass
@@ -1,14 +1,13 @@
 .sails 
   position: relative
   &-block
+    margin-left: 320px
     display: flex
     flex-direction: column
     width: 100%
     max-width: 500px
-    margin-left: 315px
-
   &-subtitle
-    margin-top: -30px
+    margin-top: 35px
     margin-bottom: 30px
     font-weight: 700
     text-transform: uppercase
@@ -45,7 +44,7 @@
     margin-left: 30px
 .top-dots
   display: flex
-  margin-top: 75px;
+  margin-top: 35px;
   & button
     background-color: Transparent
     border: none
@@ -54,15 +53,105 @@
       content: '0'
 .sails-slider
   position: relative
-  right: 0
-  top: 0
+  /* right: 0
+   top: 0 */
   &::before
     content: ""
     width: 50%
-    height: 100%
+    /* height: 100% */
     position: absolute
     background-color: #fff
     top: 0
     left: 0
 .draggable
-  max-width: 1037px
+  max-width: 1036px
+  max-height: 612px
+/* .sails-slider
+  position: absolute
+  top: 0
+  right: 0 */
+@media (max-width: 1800px)
+  .sails 
+    &-block
+      margin-left: 0px
+  .draggable
+    max-width: 950px
+@media (max-width: 1700px)
+  .draggable
+    max-width: 930px
+    max-height: 580px
+@media (max-width: 1600px)
+  .draggable
+    max-width: 900px
+@media (max-width: 1500px)
+    .draggable
+      max-width: 850px
+@media (max-width: 1400px)
+    .draggable
+      max-width: 800px
+@media (max-width: 1350px)
+    .draggable
+      max-width: 700px
+@media (max-width: 1200px) 
+  .draggable
+      max-width: 1200px
+      max-height: 550px
+  .sails
+    flex-direction: column
+    &-title
+      text-align:  left
+      max-width: 1080px 
+    &-text
+      max-width: 800px 
+      text-align: center
+@media (max-width: 992px)
+  .sails
+    padding-top: 30px
+    flex-direction: column
+    &-title
+      text-align:  center
+      width: 600px 
+    &-text
+      max-width: 600px 
+      text-align: center
+    &-subtitle
+      margin: auto
+@media (max-width: 768px)
+  .sails
+    padding-top: 30px
+    flex-direction: column
+    &-title
+      text-align:  center
+      width: 500px 
+    &-text
+      max-width: 500px 
+      text-align: center
+    &-subtitle
+      margin: auto
+@media (max-width: 576px)
+  .sails
+    padding-top: 30px
+    flex-direction: column
+    &-title
+      text-align:  center
+      width: 290px 
+      font-size: 18px
+    &-text
+      max-width: 290px 
+      text-align: center
+      font-size: 13px
+    &-subtitle
+      font-size: 14px
+      margin: auto
+    &__button
+      display: block
+      margin: auto
+      padding: 5px 15px
+    &__more
+      display: block
+      margin: auto
+      margin-top: 10px
+      padding: 0
+      padding-left: 0px
+      & img
+        margin-left: 10px
