--- a/src/sass/blocks/_submenu.sass
+++ b/src/sass/blocks/_submenu.sass
@@ -1,28 +1,36 @@
+
 #submenu
   position: absolute
-  top: 40px
-  display: none 
+  top: 30px
+  z-index: 99999
+  display: none
+  display: flex
+  background-color: #fff
   transition 0.5s
-.visible-menu
-  
+  padding: 37px;
+  padding-top: 43px;
+  padding-left: 37px;
+  padding-bottom: 30px;
+  padding-right: 0px;
+
 .navbar
   display: flex
   justify-content: space-between
+  width: 67%
+
   &__item
-    margin-right: 48px
+    /* margin-right: 48px */
     font-size: 13px
     font-weight: 700
     line-height: 20px
     text-transform: uppercase
     letter-spacing: normal
-    &:last-child
-      margin-right: 25px
-      color: $decorate-color
+
 #nav_list
   position: relative
 .submenu 
+  width: 215px
   padding-top: 30px 
-  /* padding: 10px 0 0 40px  */
   list-style: none
   text-transform: uppercase
   font-weight: 700
@@ -30,18 +38,10 @@
   z-index: 9999
   background-color: #fff
   opacity: 0.96
-  &:first-child
-    padding-left: 40px
-  &:nth-child(2)
-    margin-left: -40px
-  &:nth-child(4)
-    padding-left: 2px
   &-block
-    padding-left: 0
-    width: 270px;
+    width: 100%
   &__item
-    margin: 0
-    margin-right: 100px  
+    margin: 0  
     padding: 0
     list-style: none
     font-size: 14px
@@ -76,4 +76,17 @@
       top: 30px
       left: -5px
       border-bottom: 2px solid $decorate-color  
+@media (max-width: 1200px)
+  .nav-list
+    justify-content: center
+    .submenu 
+      width: 160px
+    max-width: 900px
+    flex-wrap: wrap
+  .navbar
+    width: none
+  
+@media (max-width: 991px)
+  .navbar
+    display: none
 
