--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,9 +2,10 @@
 @import "interface"
 /* стили для навигационного меню */
 /* стили для навбара */
-@import "blocks/nav"
+@import "blocks/navbar"
+/* @import "blocks/nav"  */
 @import "blocks/second-nav"
-@import "blocks/submenu"
+/* @import "blocks/submenu" */
 /* стили для секции каталога */
 @import "blocks/catalog"
 /* секции для блока хедер ( слайдера) */
@@ -23,3 +24,7 @@
 @import "blocks/brif"
 @import "blocks/footer"
 @import "blocks/offers"
+/* стили для модального окна с просьбой перезвонить меню */
+@import "blocks/modalone"
+/* стили для модального окна вызова замерщика меню */
+@import "blocks/modaltwo"
