--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,9 +1,13 @@
 * 
   box-sizing: border-box
 body 
+  position: relative
   padding: 0
   margin: 0
   font-family: 'Roboto', sans-serif;
+  font-weight: 700
+  & input
+    outline: none
   & a 
     outline: none
     text-decoration: none
