--- a/src/sass/blocks/_second-nav.sass
+++ b/src/sass/blocks/_second-nav.sass
@@ -15,7 +15,7 @@ label
     display: inline-block
     padding: 5px 10px 10px
     top: 2px
-    font-size: 23px
+    font-size: 30px
 
 .nav__back 
     position: fixed
@@ -63,10 +63,13 @@ label
     left: 0
     display: block
     z-index: 3
-    width: 230px
+    width: 250px
+    padding-left: 20px
+    padding-right: 20px
     margin: 0
     padding: 17px 0
     text-transform: uppercase
+    font-size: 20px
     line-height: 2em
     background-color: #2c2c2c
     overflow-y: auto
