сделал вторую секцию адаптирова до мобильной версии

--- a/src/sass/_colors.sass
+++ b/src/sass/_colors.sass
@@ -10,6 +10,8 @@ $title-color: #1f1f1f
 /* кнопки */
 $btn-portfolio: #63564f
 $orange-button: #ee8b15
-$green-button: #7dad4b;
+$green-button: #7dad4b
 $orange-button: #ee8b15
 $color-white: #fff
+
+$error-color: #FF6347
