--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -166,8 +166,9 @@
       border-bottom: 1.5px solid #fff 
 @media (max-width: 576px)
   .directions__item
+    margin-right: 0
     &:after
-      left: 55px
+      left: 80px
       top: 30px
   .footer-block
     flex-direction: column
