--- a/src/sass/blocks/_offers.sass
+++ b/src/sass/blocks/_offers.sass
@@ -28,13 +28,15 @@
     text-align: left
     text-transform: uppercase
   &__text
+    padding-top: 75px
     padding-left: 37px
     padding-right: 47px
     display: flex
     align-items: center
-    justify-content: center
+    justify-content: flex-start
     flex-direction: column
     text-align: left
+    font-weight: 400
     width: 25%
     background-color: #ffffff
 @media (max-width: 1200px) 
@@ -72,14 +74,14 @@
   .block
     &__image
       width: 80%
-      margin-left: 20px
+      margin-left: 0
       margin-bottom: 20px
       & img
         max-width: none
     &__text
       width: 80%
       min-height: 250px
-      margin-left: 20px
+      margin-left: 0
       margin-bottom: 20px
       text-align: center
     &__title
