--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -28,3 +28,5 @@
 @import "blocks/modalone"
 /* стили для модального окна вызова замерщика меню */
 @import "blocks/modaltwo"
+/* стили для карточки с товаром */
+@import "blocks/item"
