--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -4,10 +4,10 @@
   position: relative
 .slick-slide img 
     width: 100%
-    height: 79.5vh
+    height: 81vh
 .draggable 
   max-width: 100vw
-  height: 90vh
+  height: 768px
 .slider__dots img 
   position: relative
   width: 116px
@@ -15,8 +15,10 @@
   background-color: #000000
   overflow: hidden
   filter: brightness(40%)
+  object-fit: cover
 .slick-active img
   filter: brightness(100%)
+  object-fit: cover
 .slider__dots 
   left: 690px
   bottom: 65px 
@@ -51,12 +53,12 @@
     left: 220px
   .slider__dots 
     left: 560px
-@media (max-width: 1350px)
+@media (max-width: 1400px)
   .button__header
-    left: 150px
+    left: 250px
     padding: 15px 60px 15px 10px
   .slider__dots 
-    left: 460px
+    left: 560px
     bottom: 50px
     & img 
       width: 60px 
