--- a/src/sass/blocks/_portfolio.sass
+++ b/src/sass/blocks/_portfolio.sass
@@ -1,6 +1,6 @@
 .portfolio
-  padding-top: 78px
-  padding-bottom: 88px
+  padding-top: 100px
+  padding-bottom: 86px
   background-color: #f3f3f3
   &-title
     margin-bottom: 5px
@@ -18,6 +18,10 @@
     position: relative
     margin-top: 20px
     width: 49.5%
+    &:hover .portfolio__button
+      background-color: $green-button
+      cursor: pointer
+      transition: 0.2s
   &__button
     position: absolute
     max-width: 207px
@@ -31,10 +35,6 @@
     // Text style for "Гостинная"
     color: #ffffff
     letter-spacing: 0.35px
-    &:hover
-      background-color: $green-button
-      cursor: pointer
-      transition: 0.2s
 .button-velas
   padding: 9px 54px
 .button-irrida
@@ -44,8 +44,10 @@
 .button-iddida
   padding: 9px 34px
 .portfolio-full__button
+
   display: block
   margin: auto
+  margin-top: 40px
   padding: 12px 55px
   background-color: $green-button
 @media (max-width: 1200px)
@@ -60,6 +62,8 @@
       margin-top: 20px
       align-items: center
       width: 80%  
+      &:hover .portfolio__button
+        background-color: $btn-portfolio
 @media (max-width: 576px)
   .portfolio
     &__button
